--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
     <div class="card"><pre>
 <span style="color:#AAA">          <span style="color:#AAA">Iteam Solutions<span style="color:#AAA"><span style="color:#0A0"> / <span style="color:#AAA"><span style="color:#0AA">iteam1337<span style="color:#AAA"><span style="color:#FFF"></span></span></span></span></span></span></span></span>
 
-    <span style="color:#AAA"><b><span style="color:#00A">Work<span style="color:#AAA">: <span style="color:#FFF"></span></span></span></b></span>
+<span style="color:#AAA"><b><span style="color:#00A">Looking for<span style="color:#AAA">: <span style="color:#FFF"><span style="color:#AAA">Frontend, Backend, UX, Team Coach<span style="color:#FFF"></span></span></span></span></span></b></span>
+   <span style="color:#AAA"><b><span style="color:#00A">Apply at<span style="color:#AAA">: <span style="color:#FFF"><a href="https://iteam.se/jobba-hos-oss"><span style="color:#AAA">https://iteam.se/jobba-hos-oss<span style="color:#FFF"></a></span></span></span></span></span></b></span>
 
- <span style="color:#AAA"><b>Twitter: </b><span style="color:#FFF"><a href="https://twitter.com/@iteam1337"><span style="color:#AAA">https://twitter.com/<span style="color:#0AA">@iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
-     <span style="color:#AAA"><b>npm: </b><span style="color:#FFF"><a href="https://www.npmjs.com/~@iteam"><span style="color:#AAA">https://www.npmjs.com/<span style="color:#A00">~@iteam<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
-  <span style="color:#AAA"><b>GitHub: </b><span style="color:#FFF"><a href="https://github.com/iteam1337"><span style="color:#AAA">https://github.com/<span style="color:#0A0">iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
-<span style="color:#AAA"><b>LinkedIn: </b><span style="color:#FFF"><a href="https://www.linkedin.com/in/company/iteam1337"><span style="color:#AAA">https://www.linkedin.com/in/<span style="color:#00A">company/iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
+    <span style="color:#AAA"><b>Twitter: </b><span style="color:#FFF"><a href="https://twitter.com/iteam1337"><span style="color:#AAA">https://twitter.com/<span style="color:#0AA">iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
+        <span style="color:#AAA"><b>npm: </b><span style="color:#FFF"><a href="https://www.npmjs.com/~iteam"><span style="color:#AAA">https://www.npmjs.com/<span style="color:#A00">~iteam<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
+     <span style="color:#AAA"><b>GitHub: </b><span style="color:#FFF"><a href="https://github.com/iteam1337"><span style="color:#AAA">https://github.com/<span style="color:#0A0">iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
+   <span style="color:#AAA"><b>LinkedIn: </b><span style="color:#FFF"><a href="https://www.linkedin.com/company/company/iteam1337"><span style="color:#AAA">https://www.linkedin.com/company/<span style="color:#00A">company/iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
 
-    <span style="color:#AAA"><b>Card: </b><span style="color:#FFF"><span style="color:#AAA"><span style="color:#A00">npx<span style="color:#AAA"> iteam1337<span style="color:#FFF"></span></span></span></span></span></span>
+       <span style="color:#AAA"><b>Card: </b><span style="color:#FFF"><span style="color:#AAA"><span style="color:#A00">npx<span style="color:#AAA"> iteam<span style="color:#FFF"></span></span></span></span></span></span>
 </pre></div>
   </body>
 </html>
