--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <span style="color:#AAA"><b>Twitter: </b><span style="color:#FFF"><a href="https://twitter.com/iteam1337"><span style="color:#AAA">https://twitter.com/<span style="color:#0AA">iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
         <span style="color:#AAA"><b>npm: </b><span style="color:#FFF"><a href="https://www.npmjs.com/~iteam"><span style="color:#AAA">https://www.npmjs.com/<span style="color:#A00">~iteam<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
      <span style="color:#AAA"><b>GitHub: </b><span style="color:#FFF"><a href="https://github.com/iteam1337"><span style="color:#AAA">https://github.com/<span style="color:#0A0">iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
-   <span style="color:#AAA"><b>LinkedIn: </b><span style="color:#FFF"><a href="https://www.linkedin.com/company/company/iteam1337"><span style="color:#AAA">https://www.linkedin.com/company/<span style="color:#00A">company/iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
+   <span style="color:#AAA"><b>LinkedIn: </b><span style="color:#FFF"><a href="https://www.linkedin.com/company/iteam1337"><span style="color:#AAA">https://www.linkedin.com/company/<span style="color:#00A">iteam1337<span style="color:#AAA"><span style="color:#FFF"></a></span></span></span></span></span></span>
 
        <span style="color:#AAA"><b>Card: </b><span style="color:#FFF"><span style="color:#AAA"><span style="color:#A00">npx<span style="color:#AAA"> iteam<span style="color:#FFF"></span></span></span></span></span></span>
 </pre></div>
